[package]
name = "thumbsdbkit"
version = "1.0.2"
authors = [
    "Thomas BAILLEUX <thomas@bailleux.me>",
    "Berkus Decker <berkus+crates@madfire.net>",
]
license = "WTFPL"
description = "A simple forensic command line tool for analyzing and extracting thumbnails from Microsoft Thumbs.db files"
homepage = "https://github.com/zadlg/thumbsdbkit"
keywords = ["forensic", "thumbsdb", "thumbnails", "parser", "command-line"]
repository = "https://github.com/zadlg/thumbsdbkit.git"
readme = "README.md"
edition = "2021"

[dependencies]
thumbsdb = "0.1.0"
clap = "2.31.1"
ansi_term = "0.11.0"
chrono = "0.4.0"
thiserror = "1.0.64"
