[package]
name = "thumbsdbkit"
version = "1.0.2"
authors = [
    "Thomas BAILLEUX <thomas@bailleux.me>",
    "Berkus Decker <berkus+crates@madfire.net>",
]
license = "WTFPL"
description = "A simple forensic command line tool for analyzing and extracting thumbnails from Microsoft Thumbs.db files"
homepage = "https://github.com/zadlg/thumbsdbkit"
keywords = ["forensic", "thumbsdb", "thumbnails", "parser", "command-line"]
repository = "https://github.com/zadlg/thumbsdbkit.git"
readme = "README.md"
edition = "2021"

[dependencies]
thumbsdb = "0.1.2"
ansi_term = "0.12.1"
thiserror = "1.0.64"
jiff = "0.1.13"
argh = "0.1.12"
